--- a/css/styles.css
+++ b/css/styles.css
@@ -1,915 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  background: #fff;
-  color: #434455;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-address {
-  font-style: normal;
-}
-.section {
-  padding: 120px 0;
-}
-button {
-  cursor: pointer;
-  font-family: inherit;
-}
-
-input {
-  font-family: inherit;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-/* visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-} */
-
-/* heder section */
-.hdra {
-  background: #ffffff;
-  border-bottom: solid 1px #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  /* position: fixed; */
-  /* position: sticky;
-  top: 0;
-  z-index: 1000; */
-}
-
-.container {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-/* logo navigaciya address */
-
-.naviget {
-  display: flex;
-  align-items: center;
-}
-.naviget-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-.hdra-lg {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  margin-right: 76px;
-  padding: 24px 0;
-  display: block;
-}
-
-.text-lg {
-  color: #2e2f42;
-}
-
-.naviget-link {
-  text-decoration: none;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  padding: 24px 0;
-  display: block;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.naviget-link.current {
-  position: relative;
-}
-.naviget-link.current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
-
-.naviget-link:hover,
-.naviget-link:focus,
-.addr-s-link:hover,
-.addr-s-link:focus,
-.naviget-link.current {
-  color: #404bbf;
-}
-
-.addr-s {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  margin-left: auto;
-}
-
-.addr-list {
-  display: flex;
-  margin-left: auto;
-  gap: 40px;
-}
-
-.addr-s-link {
-  width: 154px;
-  font-weight: 400;
-  font-size: 16px;
-  font-style: normal;
-  text-decoration: none;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* ONE SECTION */
-.top-container {
-}
-.top-block {
-  padding: 188px 0;
-  background-color: #2e2f42;
-
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/people-office.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 1440px;
-  background-position: center;
-  margin: 0 auto;
-}
-.h-one {
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 107%;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #fff;
-  max-width: 496px;
-  height: 120px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 48px;
-}
-
-.hero-btn {
-  font-family: 'Roboto', sans-serif;
-  color: #fff;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  /* cursor: pointer; global batton */
-  text-align: center;
-  min-width: 169px;
-  min-height: 56px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  border: none;
-  border-radius: 4px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: #4d5ae5;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-btn:hover,
-.hero-btn:focus {
-  background-color: #404bbf;
-}
-/* TWO SECTION */
-.description {
-  padding: 120px 0 120px;
-}
-.dscr-container {
-}
-.dscr-list {
-  display: flex;
-  justify-content: space-between;
-  gap: 24px;
-  margin: 0;
-
-  padding-left: 0;
-}
-
-.dscr-item {
-  width: calc((100% - 72px) / 3);
-}
-
-.dscr-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 112px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-
-  background-color: #f4f4fd;
-  text-align: center;
-  margin-bottom: 8px;
-  padding: 24px 0;
-}
-
-.dscr-h {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-
-.dscr-item-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
-/* THREE SECTION */
-.sctn-team {
-}
-
-.team-container {
-}
-.h-two {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 111%;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
-.team-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 24px;
-  /* margin: 120px 0; */
-  padding-left: 0;
-}
-.sctn-team {
-  background-color: #f4f4fd;
-}
-
-.item-card {
-  background-color: #ffffff;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
-  width: calc((100% - 72px) / 4);
-}
-
-/* not work corect */
-.box-overley {
-  position: relative;
-  overflow: hidden;
-}
-.lishka-portfolio:hover .overley {
-  transform: translateY(0);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.overley {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 40px 32px;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  background-color: #4d5ae5;
-  border-radius: 0px;
-  width: 100%;
-  height: 100%;
-  color: #f4f4fd;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* .overley:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-} */
-
-.item-card-name {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.h-three-team {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 120%;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  text-align: center;
-  margin-bottom: 8px;
-}
-
-.item-card-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #434455;
-}
-.social-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-  margin-top: 8px;
-}
-.lishka-icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.href-social-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  background-color: #4d5ae5;
-  fill: #f4f4fd;
-  width: 40px;
-  height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.href-social-icon:hover,
-.href-social-icon:focus {
-  background-color: #404bbf;
-}
-.icon-svg {
-}
-/* FOUR SECTION */
-.portfolio {
-  background: #fff;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
-.portfolio-container {
-}
-
-.portfolio-two {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 111%;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-  /* margin-top: 120px; */
-}
-
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-.lishka-portfolio {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.lishka-portfolio:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.three-team {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 120%;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  text-align: left;
-  margin-bottom: 8px;
-}
-
-.item-portfolio-name {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-  /* margin-bottom: 8px; */
-}
-
-.item-portfolio-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
-/* FOOTER SECTION */
-.ftr {
-  background: #2e2f42;
-  padding: 100px 0;
-}
-.ftr-div-flex {
-  display: flex;
-  align-items: baseline;
-}
-
-.ftr-lg {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  /* margin-right: 76px; */
-  /* padding: 24px 0; */
-  padding-bottom: 16px;
-  /* display: inline-block; */
-  /* margin-bottom: 16px; */
-  max-width: 115px;
-  display: block;
-}
-
-.text-lg-t {
-  color: #f4f4fd;
-}
-
-.ftr-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  max-width: 264px;
-}
-.ftr-container {
-  margin: 0;
-  margin-right: 120px;
-}
-.ftr-soc-container {
-}
-.p-ftr {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  margin-bottom: 16px;
-}
-.social-list-ftr {
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-}
-.ftr-social {
-  /* background-color: #31d0aa; */
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.ftr-social:hover,
-.ftr-social:focus {
-  background-color: #31d0aa;
-}
-
-.subscribe-form {
-  display: flex;
-  gap: 24px;
-}
-.subscribe-container {
-  margin-left: auto;
-}
-.subscribe-input {
-  width: 264px;
-  height: 40px;
-  border: 1px solid #ffffff;
-  background-color: transparent;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  padding-left: 16px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  color: #ffffff;
-}
-.subscribe-input::placeholder {
-  color: #ffffff;
-}
-.subscribe-p {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  margin-bottom: 16px;
-}
-.subscribe-btn {
-  min-width: 165px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
-  cursor: pointer;
-  background-color: #4d5ae5;
-  border: none;
-  border-radius: 4px;
-  padding-left: 24px;
-}
-
-.subscribe-btn:hover,
-.subscribe-btn:focus {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: #404bbf;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.send-btn-icon {
-  fill: #fff;
-  margin: 8px;
-  margin-left: 16px;
-}
-
-.backdrop {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  background-color: rgba(46, 47, 66, 0.4);
-
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 408px;
-  min-height: 584px;
-  padding: 72px 24px 24px 24px;
-
-  background-color: #fcfcfc;
-  border-radius: 4px;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-    0 2px 1px 0 rgba(0, 0, 0, 0.2);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop:not(.is-open) .modal {
-  transform: translate(-50%, -50%) scale(1.5);
-}
-
-.modal-close {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  border-radius: 50%;
-  fill: #2e2f42;
-  /* border: solid 1px #2e2f42; */
-  background-color: #e7e9fc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  border: 1px solid #0000001a;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-close:hover,
-.modal-close:focus {
-  background-color: #404bbf;
-  border: none;
-}
-
-.modal-close:hover > .close-icon,
-.modal-close:focus > .close-icon {
-  fill: #ffffff;
-}
-
-/* .modal-close:hover > .icon-svg-close,
-.modal-close:focus > .icon-svg-close {
-  fill: #ffffff;
-} */
-
-.icon-svg-close {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-}
-
-.p-form {
-  /* margin-top: 24px; */
-  margin-bottom: 16px;
-  font-weight: 500;
-  font-size: 16px;
-
-  /* line-height: 24px; */
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-}
-
-/* form-modal */
-.contact-form {
-  /* display: flex;
-  flex-direction: column;
-  margin-top: 16px; */
-}
-.form-header {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 16px;
-  margin-top: 24px;
-}
-
-.close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close-btn:hover,
-.close-btn:focus {
-  background-color: #404bbf;
-  border: none;
-}
-.close-btn:hover > .close-icon,
-.close-btn:focus > .close-icon {
-  fill: #ffffff;
-}
-
-.close-icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-}
-.form-input-wrapper {
-  margin-bottom: 8px;
-}
-
-.input-container {
-  position: relative;
-}
-.input-container:focus-within {
-  border-color: #6c63ff;
-}
-.form-label {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  display: block;
-  margin-bottom: 4px;
-}
-.form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  padding-left: 38px;
-  background-color: transparent;
-  outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-input:focus {
-  border: 1px solid #4d5ae5;
-  box-shadow: 0 0 4px rgba(77, 90, 229, 0.5);
-}
-
-.input-icon {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: #2e2f42;
-}
-
-/* .input-icon:hover, */
-.input-icon:focus {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: #4d5ae5;
-}
-
-/* .input-container:hover > .input-icon, */
-.form-input:focus-within + .input-icon {
-  fill: #4d5ae5;
-}
-
-/* .form-input:hover,
-.form-input:focus {
-  fill: #4d5ae5;
-  border-color: #4d5ae5;
-} */
-
-.comment-area {
-  width: 100%;
-  height: 120px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  background-color: transparent;
-  padding: 8px 16px;
-  outline: transparent;
-  resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.comment-area:focus {
-  border-color: #4d5ae5;
-}
-.form-comment {
-  margin-bottom: 16px;
-}
-textarea::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16667;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
-}
-.form-checkbox {
-  margin-bottom: 24px;
-}
-.checkbox {
-  position: relative;
-  cursor: pointer;
-  vertical-align: middle;
-  margin-right: 8px;
-  border-radius: 4px;
-  width: 360px;
-  height: 16px;
-}
-.checkbox-label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-}
-.checkbox-span {
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
-  margin-right: 8px;
-}
-
-.checkbox-icon {
-  fill: #f4f4fd;
-}
-
-input[type='checkbox']:checked + .checkbox-label .checkbox-span {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
-}
-
-.polyci-link {
-  color: #4d5ae5;
-  text-decoration: underline;
-}
-.form-btn {
-  display: block;
-  margin: 0 auto;
-  border-radius: 4px;
-  padding: 16px 32px;
-  min-width: 169px;
-  height: 56px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #4d5ae5;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  cursor: pointer;
-  text-align: center;
-  color: #fff;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-btn:hover,
-.form-btn:focus {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: #404bbf;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.hidden {
+  display: none;
 }
