--- a/css/styles.css
+++ b/css/styles.css
@@ -83,9 +83,234 @@ img {
     max-width: 768px;
   }
 }
-@media screen and (min-width: 1058px) {
+
+@media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
     padding: 0 15px;
+  }
+}
+
+/* header */
+.hdra {
+  background: #ffffff;
+  border-bottom: solid 1px #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.naviget-list,
+.addr-s {
+  display: none;
+}
+/* logo */
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.hdra-lg {
+  padding: 16px 0;
+  display: block;
+}
+.text-lg {
+  color: #2e2f42;
+}
+.menu-button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+}
+
+.menu-icon {
+  display: block;
+  fill: #2f2f37;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+
+  .menu-button {
+    display: none;
+  }
+
+  .naviget-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+  .addr-s {
+    font-style: normal;
+    display: block;
+  }
+  .naviget {
+    display: flex;
+    align-items: center;
+  }
+  .hdra-lg {
+    margin-right: 120px;
+    padding: 24px 0;
+  }
+  .naviget-link {
+    text-decoration: none;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    padding: 24px 0;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .naviget-link.current {
+    position: relative;
+  }
+  .naviget-link.current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
+  .naviget-link:hover,
+  .naviget-link:focus,
+  .addr-s-link:hover,
+  .addr-s-link:focus,
+  .naviget-link.current {
+    color: #404bbf;
+  }
+
+  .addr-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .addr-s-link {
+    display: block;
+
+    font-weight: 400;
+    font-size: 12px;
+    font-style: normal;
+    text-decoration: none;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #434455;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+  .hdra-lg {
+    margin-right: 76px;
+  }
+
+  .addr-list {
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .addr-s-link {
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+}
+
+/* mobile menu */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu-containet {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 70px;
+  padding-bottom: 40px;
+}
+
+.mobile-menu:not(.is-open) .mobile-menu-containet {
+  transform: translate(-50%, -50%) scale(1.5);
+}
+.menu-modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  border-radius: 50%;
+  fill: #2e2f42;
+  /* border: solid 1px #2e2f42; */
+  background-color: #e7e9fc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  border: 1px solid #0000001a;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1158px) {
+  .mobile-menu {
+    display: none;
+  }
+  .menu-modal-close {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+  .menu-modal-close {
+    display: none;
   }
 }
