--- a/css/styles.css
+++ b/css/styles.css
@@ -251,8 +251,9 @@ img {
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  /* align-items: center; */
+  z-index: 1000;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -267,11 +268,14 @@ img {
 }
 
 .mobile-menu-containet {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
   width: 100%;
-  padding-top: 70px;
+  /* height: 100%; */
+  padding: 0 16px;
+  padding-top: 72px;
   padding-bottom: 40px;
 }
 
@@ -298,6 +302,10 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.menu-naviget {
+  margin-bottom: auto;
+}
+
 @media screen and (min-width: 1158px) {
   .mobile-menu {
     display: none;
@@ -312,5 +320,110 @@ img {
   }
   .menu-modal-close {
     display: none;
+  }
+}
+/* one section */
+
+.top-container {
+}
+.top-block {
+  /* padding: 188px 0; */
+  padding-top: 72px;
+  padding-bottom: 72px;
+  background-color: #2e2f42;
+
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 320px;
+  background-position: center;
+  margin: 0 auto;
+}
+.h-one {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  max-width: 216px;
+  height: 120px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 72px;
+}
+
+.hero-btn {
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  /* cursor: pointer; global batton */
+  text-align: center;
+  min-width: 169px;
+  min-height: 56px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero-btn:hover,
+.hero-btn:focus {
+  background-color: #404bbf;
+}
+
+@media screen and (min-width: 1158px) {
+  .top-block {
+    padding: 188px 0;
+    background-color: #2e2f42;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+
+    max-width: 1158px;
+  }
+  .h-one {
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .top-block {
+    padding: 112px 0;
+    background-color: #2e2f42;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 768px;
+    background-position: center;
+    margin: 0 auto;
+  }
+
+  .top-block .h-one {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 107%;
+
+    color: #fff;
+    max-width: 496px;
+
+    margin-bottom: 36px;
   }
 }
