--- a/css/styles.css
+++ b/css/styles.css
@@ -381,24 +381,6 @@ img {
   background-color: #404bbf;
 }
 
-@media screen and (min-width: 1158px) {
-  .top-block {
-    padding: 188px 0;
-    background-color: #2e2f42;
-
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/people-office.jpg);
-
-    max-width: 1158px;
-  }
-  .h-one {
-    margin-bottom: 48px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .top-block {
     padding: 112px 0;
@@ -425,5 +407,47 @@ img {
     max-width: 496px;
 
     margin-bottom: 36px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .top-block {
+    padding: 188px 0;
+    background-color: #2e2f42;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+
+    max-width: 1440px;
+  }
+  .h-one {
+    margin-bottom: 48px;
+  }
+  .hero-btn {
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    /* cursor: pointer; global batton */
+    text-align: center;
+    min-width: 169px;
+    min-height: 56px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .hero-btn:hover,
+  .hero-btn:focus {
+    background-color: #404bbf;
   }
 }
