--- a/css/styles.css
+++ b/css/styles.css
@@ -452,35 +452,6 @@ img {
   background-color: #404bbf;
 }
 
-@media screen and (min-width: 768px) {
-  .top-block {
-    padding: 112px 0;
-    background-color: #2e2f42;
-
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/people-office.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-width: 768px;
-    background-position: center;
-    margin: 0 auto;
-  }
-
-  .top-block .h-one {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 107%;
-
-    color: #fff;
-    max-width: 496px;
-
-    margin-bottom: 36px;
-  }
-}
-
 /* modal */
 .backdrop {
   position: fixed;
@@ -509,9 +480,9 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 408px;
-  min-height: 584px;
-  padding: 72px 24px 24px 24px;
+  width: 288px;
+  min-height: 623px;
+  padding: 72px 16px 24px 16px;
 
   background-color: #fcfcfc;
   border-radius: 4px;
@@ -783,6 +754,40 @@ input[type='checkbox']:checked + .checkbox-label .checkbox-span {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .top-block {
+    padding: 112px 0;
+    background-color: #2e2f42;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 768px;
+    background-position: center;
+    margin: 0 auto;
+  }
+
+  .top-block .h-one {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 107%;
+
+    color: #fff;
+    max-width: 496px;
+
+    margin-bottom: 36px;
+  }
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .top-block {
     padding: 188px 0;
@@ -822,5 +827,10 @@ input[type='checkbox']:checked + .checkbox-label .checkbox-span {
   .hero-btn:hover,
   .hero-btn:focus {
     background-color: #404bbf;
+  }
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
   }
 }
