--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ img {
   position: relative;
 
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   padding: 0 16px;
   padding-top: 72px;
   padding-bottom: 40px;
@@ -316,7 +316,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  margin-bottom: 168px;
+  margin-bottom: auto;
 }
 
 .menu-naviget-link {
@@ -698,6 +698,11 @@ textarea::placeholder {
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
+.checkbox-conteiner {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
 .checkbox-span {
   width: 16px;
   height: 16px;
@@ -711,6 +716,11 @@ textarea::placeholder {
   justify-content: center;
   fill: transparent;
   margin-right: 8px;
+}
+.checkbox-text {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
 }
 
 .checkbox-icon {
