--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -163,7 +163,7 @@ img {
 .naviget-link.current {
   color: #404bbf;
 } */
-
+/* 
 .addr-s {
   display: flex;
   align-items: center;
@@ -191,7 +191,7 @@ img {
 }
 
 /* ONE SECTION */
-.top-container {
+/* .top-container {
 }
 .top-block {
   padding: 188px 0;
@@ -245,9 +245,9 @@ img {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: #404bbf;
-}
+} */
 /* TWO SECTION */
-.description {
+/* .description {
   padding: 120px 0 120px;
 }
 .dscr-container {
@@ -294,7 +294,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
+} */
 
 /* THREE SECTION */
 .sctn-team {
@@ -357,13 +357,13 @@ img {
   color: #f4f4fd;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* .overley:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 } */
-
+/* 
 .item-card-name {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -412,7 +412,7 @@ img {
   background-color: #404bbf;
 }
 .icon-svg {
-}
+} */
 /* FOUR SECTION */
 .portfolio {
   background: #fff;
@@ -607,7 +607,7 @@ img {
   margin-left: 16px;
 }
 
-/* .backdrop {
+.backdrop {
   position: fixed;
   left: 0;
   top: 0;
@@ -701,7 +701,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-} */
+}
 
 /* form-modal */
 .contact-form {
