--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -163,7 +163,7 @@ img {
 .naviget-link.current {
   color: #404bbf;
 } */
-/* 
+
 .addr-s {
   display: flex;
   align-items: center;
@@ -191,7 +191,7 @@ img {
 }
 
 /* ONE SECTION */
-/* .top-container {
+.top-container {
 }
 .top-block {
   padding: 188px 0;
@@ -245,7 +245,7 @@ img {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: #404bbf;
-} */
+}
 /* TWO SECTION */
 /* .description {
   padding: 120px 0 120px;
@@ -357,13 +357,13 @@ img {
   color: #f4f4fd;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 /* .overley:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 } */
-/* 
+
 .item-card-name {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -412,7 +412,7 @@ img {
   background-color: #404bbf;
 }
 .icon-svg {
-} */
+}
 /* FOUR SECTION */
 .portfolio {
   background: #fff;
