--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -912,4 +912,4 @@ input[type='checkbox']:checked + .checkbox-label .checkbox-span {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #404bbf;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
