--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -216,7 +216,7 @@ img {
   text-align: center;
   color: #fff;
   max-width: 496px;
-  height: 120px;
+  /* height: 120px; ніколи не обмежувати висоту заголовку*/
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 48px;
