checkbox-span center

--- a/css/styles.css
+++ b/css/styles.css
@@ -733,6 +733,9 @@ textarea::placeholder {
   flex-shrink: 0;
   fill: transparent;
   margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .checkbox-text {
 }
